--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   font-size: 62.5%;
+  font-family: 'League Spartan', sans-serif;
 }
 
 .main-container {
@@ -15,7 +16,6 @@
 }
 
 .calc-container{
-     border: 1px solid;
      width: 90%;
      max-width: 335px;
      height: 550px;
@@ -28,7 +28,6 @@
 
 .contenedor-numeros, .contenedor-valores{
      width: 100%;
-     border: 1px solid;
      background-color: hsl(224, 36%, 15%);
      border-radius: 10px;
 }
@@ -39,25 +38,47 @@
 
 .contenedor-numeros{
      height: 430px;
-
      display: flex;
      justify-content: center;
      align-items: center;
 }
 
 .contenedor-numerosPrincipal{
-     border: 1px solid white;
      width: 80%;
      height: 90%;
      display: grid;
      grid-template-columns: repeat(4, 1fr);
-     grid-template-rows: repeat(4, 1fr);
+     grid-template-rows: repeat(5, 1fr);
 }
 
 .contenedor-numeros button{
      width: 90%;
-     height: 60%;
+     height: 80%;
      place-self: center;
-     font-size: 2rem;
+     font-size: 3.2rem;
      border-radius: 5px;
+     color: hsl(224, 28%, 35%);
+     border: none;
+     cursor: pointer;
+}
+
+#reset{
+     grid-area: 5 / 3 / 6 / 5;
+}
+
+#equal{
+     grid-area: 5 / 1 / 5 / 3;
+     background-color: hsl(6, 63%, 50%);
+     color: white;
+     font-size: 2.2rem;
+}
+
+#del{
+     font-size: 2.2rem;
+}
+
+#del, #reset{
+     font-size: 2.2rem;
+     background-color: hsl(225, 21%, 49%);
+     color: white;
 }
